# FlyManager

./: README.md  output.txt  pyproject.toml
data/: flymanager.xlsx  flymanager_export.xlsx
flymanager/: __init__.py  labels.py
flymanager/app/: flask_server.py
flymanager/static/css/: cross_explorer.css  stock_explorer.css
flymanager/static/js/: cross_explorer.js  fly_flipper.js  stock_explorer.js
flymanager/templates/: add_cross.html  add_stock.html  base.html  cross_explorer.html  filter_cross.html  filter_field.html  filter_form.html  filter_stock.html  flip.html  home.html  stock_explorer.html  upload_data.html  view_cross.html  view_stock.html
flymanager/templates/.old/: flip__.html  home__.html  stock_explorer__.html
flymanager/templates/auth/: forgot_password.html  login.html  register.html
flymanager/utils/: converter.py  genetics.py  gsheet.py  labels.py  mongo.py  scanner.py  utils.py
flymanager/utils/.old/: gsheet.py
scripts/: generate_labels.py
tests/: fill_metadata_from_bloomington.py  fill_metadata_from_current_genotypes.py  gspread_test.py  import_from_sheets.py  serial_test.py  test.ipynb
