[tool.poetry]
name = "flymanager"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
mkinit = "^1.0.0"
cryptography = "^41.0.2"
lazy-loader = "^0.3"
split-file-reader = "^0.1.4"
statannotations = "^0.5.0"
joblib = "^1.3.1"
tqdm = "^4.65.0"
ipykernel = "^6.29.5"
reportlab = "^4.2.2"
qrcode = "^7.4.2"
segno = "^1.6.1"
flask = "^3.0.3"
pyserial = "^3.5"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
flask-session = "^0.8.0"
redis = "^5.0.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
flask-socketio = "^5.3.6"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
